[package]
name = "bor_conversions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11"}
chrono = {version = "0.4", features = ["serde"]}
thiserror = "1.0.38"
lazy_static = "1.4.0"
serde_derive = "1.0.152"
serde = "1.0.152"
reqwest = {version = "0.11.14", features = ["blocking"]}
help = { git="https://github.com/Sir-Bobert-II/BOR-extra", rev ="f31f85bc48c6b90a5f19facfcf7ea561a959374a" }